hphp/hack/test/ifc/check/new_return.php.exp
=== IFC analysis results for new_return.php
File "new_return.php", line 25, characters 3-29:
Data with policy `FILE` appears in context `PUBLIC`. (Typing[4379])
  File "new_return.php", line 14, characters 19-23:
  This may be the data source with policy `FILE`
  File "new_return.php", line 16, characters 19-30:
  This may be the data sink with policy `PUBLIC`
  File "new_return.php", line 6, characters 19-23:
  Another program point contributing to the illegal flow
  File "new_return.php", line 24, characters 3-23:
  Another program point contributing to the illegal flow
File "new_return.php", line 31, characters 3-20:
Data with policy `FILE` appears in context `PUBLIC`. (Typing[4379])
  File "new_return.php", line 14, characters 19-23:
  This may be the data source with policy `FILE`
  File "new_return.php", line 18, characters 14-22:
  This may be the data sink with policy `PUBLIC`
  File "new_return.php", line 6, characters 19-23:
  Another program point contributing to the illegal flow
  File "new_return.php", line 30, characters 3-23:
  Another program point contributing to the illegal flow
